# keep-track-nz

./: .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.test.ts  vite.config.ts
.claude/commands/: bug.md  feature.md  install.md
.github/workflows/: deploy.yml
assets/: index-B-4KeysI.js  index-BQF0A3VK.js  index-BbDvz23w.css  index-CNFagkg5.js  index-CSkIFc-X.js  index-XHAQFlRc.css  index-dHN3_TvE.js
backend/: .coverage  README.md  config.example.py  debug_out.txt  pyproject.toml
backend/scripts/: setup.py  setup_cron.py
backend/src/keep_track_nz/: __init__.py  git_integration.py  main.py
backend/src/keep_track_nz/debug/: __init__.py  formatters.py
backend/src/keep_track_nz/exporters/: __init__.py  base.py  typescript.py
backend/src/keep_track_nz/models/: __init__.py  schema.py
backend/src/keep_track_nz/processors/: __init__.py  base.py  deduplicator.py  labeler.py  validator.py
backend/src/keep_track_nz/scrapers/: __init__.py  base.py  beehive.py  gazette.py  legislation.py  parliament.py
backend/tests/: __init__.py  test_cli.py  test_debug.py  test_exporters.py  test_git_integration.py  test_main.py  test_models.py  test_processors.py
docs/: beehive-scraping-guide.md  parliament-scraping-guide.md
public/: CNAME
specs/: backend-debug-mode.md  fix-action-filtering-and-sorting.md  fix-beehive-scraper.md  fix-parliament-beehive-scrapers-zero-data.md  fix-source-dropdown-filtering-bug.md  python-data-collection-backend.md
src/: App.tsx  index.css
src/components/: ActionCard.tsx  ActionFilters.tsx  Footer.tsx  Header.tsx
src/data/: actions.ts  data.json  fixtureData.ts
src/lib/: actionFilters.test.ts  actionFilters.ts  performanceTest.ts
src/pages/: About.tsx  (+3 more)
(+3 files in other folders)
